# FProc

./: CMakeLists.txt  LICENSE  README.md
assets/: SProc.rc
src/: ConsoleUtils.cpp  ConsoleUtils.h  ProcessManager.cpp  ProcessManager.h  main.cpp
